--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -72,6 +72,6 @@
 
     <string name="status_completed"> Завършено </string>
     <string name="status_prepare"> Подготовка </string>
-    <string name="status_accepted"> Прието </string>
+    <string name="status_accepted"> Новый </string>
     <string name="status_delivered"> Доставено </string>
 </resources>
